--- a/src/index.css
+++ b/src/index.css
@@ -46,25 +46,6 @@
   --scrollbar-track: transparent;
 }
 
-/* .file-selector::-webkit-scrollbar {
-  height: 1px;
-}
-
-.file-selector::-webkit-scrollbar-track {
-  background-color: 1px;
-}
-
-.file-selector::-webkit-scrollbar-thumb {
-  background-color: blue;
-}
-
-@-moz-document url-prefix('') {
-  .file-selector {
-    scrollbar-width: thin;
-    scrollbar-color: blue 1px;
-  }
-} */
-
 .dark {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
@@ -145,5 +126,11 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer base {
+  *:not(.scrollbar) {
+    scrollbar-width: thin;
   }
 }
