--- a/src/layout/root-preview/iframe.html
+++ b/src/layout/root-preview/iframe.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Playgroung Preview</title>
+    <title>React Playground Preview</title>
   </head>
   <body>
+    <script>
+      // 监听错误事件并发送给父窗口
+      window.addEventListener("error", (e) => {
+        window.parent.postMessage({ type: "ERROR", message: e.message });
+      });
+    </script>
     <script type="importmap"></script>
     <script type="module" id="appSrc"></script>
     <div id="root"></div>
