--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 @import "tailwindcss";
 @import "tw-animate-css";
+/* biome-ignore lint/suspicious/noUnknownAtRules: <explanation> ignore */
 @plugin 'tailwind-scrollbar' {
+  /* biome-ignore lint/correctness/noUnknownProperty: <explanation> ignore */
   nocompatible: true;
+  /* biome-ignore lint/correctness/noUnknownProperty: <explanation> ignore */
   preferredstrategy: "pseudoelements";
 }
 
+/* biome-ignore lint/suspicious/noUnknownAtRules: <explanation> ignore */
 @custom-variant dark (&:is(.dark *));
 
 :root {
@@ -32,7 +36,6 @@
   --chart-3: oklch(0.398 0.07 227.392);
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
-  --radius: 0.625rem;
   --sidebar: oklch(0.985 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
   --sidebar-primary: oklch(0.205 0 0);
@@ -77,6 +80,7 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+/* biome-ignore lint/suspicious/noUnknownAtRules: <explanation> ignore */
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -118,9 +122,11 @@
 
 @layer base {
   * {
+    /* biome-ignore lint/suspicious/noUnknownAtRules: <explanation> ignore */
     @apply border-border outline-ring/50;
   }
   body {
+    /* biome-ignore lint/suspicious/noUnknownAtRules: <explanation> ignore */
     @apply bg-background text-foreground;
   }
 }
